[package]
name = "token-wrapper"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_wrapper"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test-sbf = []


[dependencies]
anchor-lang = {version = "0.31.1", features=["init-if-needed"]}
anchor-spl = "0.31.1"
anyhow = "1.0.99"

[dev-dependencies]
mollusk-svm = "0.4.2"
mollusk-svm-programs-token = "0.4.2"
solana-sdk = "2.3.1"
spl-token = "8.0.0"

