[package]
name = "token-wrapper"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_wrapper"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test-sbf = []


[dependencies]
anchor-lang = {version = "0.31.1", features=["init-if-needed"]}
anchor-spl = "0.31.1"

[dev-dependencies]
anyhow = "1.0.99"
mollusk-svm = { git = "https://github.com/abelmarnk/mollusk", package = "mollusk-svm"}
mollusk-svm-programs-token = { git = "https://github.com/abelmarnk/mollusk", package = "mollusk-svm-programs-token"}
solana-sdk = "2.3.1"
spl-token = "8.0.0"

